Improve search bar and include magnifying glass icon

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </header>
 
   <main>
-    <img src="logo.png" alt="Google logo">
+   <div id="logo"><img src="logo.png" alt="Google logo"></div>
     <form>
-      <input type="text" placeholder="Search">
+     <div id='input'><input type="text" placeholder="Search"></div>
       <button>Google Search</button>
       <button>Feeling Lucky</button>
     </form>
