--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Google</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Google</title>
-</head>
+	<body>
+		<header>
+			<nav>
+				<ul>
+					<li>Gmail</li>
+					<li>Imagens</li>
+					<li>square thing</li>
+					<li>Login</li>
+				</ul>
+			</nav>
+		</header>
 
-<body>
+		<main>
+			<div id="logoDiv"><img src="logo.png" alt="Google logo" /></div>
+			<form>
+				<div id="inputDiv">
+					<img id="magIco" src="magnifying-glass-icon.jpg" alt="Magnifying glass icon" />
+					<input type="text" placeholder="Search" />
+					<img src="mic-icon.png" alt="Search by voice icon" id="voiceIco" />
+				</div>
+				<button>Google Search</button>
+				<button>Feeling Lucky</button>
+			</form>
+		</main>
 
-  <header>
-    <nav>
-      <ul>
-        <li>Gmail</li>
-        <li>Imagens</li>
-        <li>square thing</li>
-        <li>Login</li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-   <div id="logo"><img src="logo.png" alt="Google logo"></div>
-    <form>
-     <div id='input'><input type="text" placeholder="Search"></div>
-      <button>Google Search</button>
-      <button>Feeling Lucky</button>
-    </form>
-  </main>
-
-<footer>
-  <ul>
-    <li>Advertising</li>
-    <li>Business</li>
-    <li>About</li>
-    <li>How Search Works</li>
-  </ul>
-  <ul>
-    <li>Privacy</li>
-    <li>Terms</li>
-    <li>Settings</li>
-  </ul>
-</footer>
-
-</body>
-
+		<footer>
+			<ul>
+				<li>Advertising</li>
+				<li>Business</li>
+				<li>About</li>
+				<li>How Search Works</li>
+			</ul>
+			<ul>
+				<li>Privacy</li>
+				<li>Terms</li>
+				<li>Settings</li>
+			</ul>
+		</footer>
+	</body>
 </html>
