Finish styling footer and flesh out header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<li>Gmail</li>
 					<li>Imagens</li>
 					<li>square thing</li>
-					<li>Login</li>
+					<li>Sign In</li>
 				</ul>
 			</nav>
 		</header>
@@ -25,7 +25,9 @@
 				<div id="inputDiv">
 					<img id="magIco" src="magnifying-glass-icon.jpg" alt="Magnifying glass icon" />
 					<input type="text" placeholder="Search" />
-					<img src="mic-icon.png" alt="Search by voice icon" id="voiceIco" />
+					<div id="voiceIcoDiv">
+						<img src="mic-icon.png" alt="Search by voice icon" id="voiceIco" />
+					</div>
 				</div>
 				<button>Google Search</button>
 				<button>Feeling Lucky</button>
