--- a/index.html
+++ b/index.html
@@ -11,10 +11,28 @@
 		<header>
 			<nav>
 				<ul>
-					<li>Gmail</li>
-					<li>Imagens</li>
-					<li>square thing</li>
-					<li>Sign In</li>
+					<li><a href="https://mail.google.com/mail/?tab=wm&ogbl" target="_blank">Gmail</a></li>
+					<li>
+						<a href="https://www.google.com.br/imghp?hl=en&tab=wi&ogbl" target="_blank">Images</a>
+					</li>
+					<li>
+						<a href="https://www.google.com.br/intl/en/about/products?tab=wh" target="_blank">
+							<img
+								src="https://jethroestangki.me/google-homepage/images/apps.svg"
+								alt="Apps Icon"
+							/>
+						</a>
+					</li>
+					<li>
+						<button>
+							<a
+								href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAAQ"
+								target="_blank"
+							>
+								Sign In
+							</a>
+						</button>
+					</li>
 				</ul>
 			</nav>
 		</header>
@@ -26,7 +44,24 @@
 					<img id="magIco" src="magnifying-glass-icon.jpg" alt="Magnifying glass icon" />
 					<input type="text" placeholder="Search" />
 					<div id="voiceIcoDiv">
-						<img src="mic-icon.png" alt="Search by voice icon" id="voiceIco" />
+						<!-- SVG COPYED BY GOOGLE -->
+						<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z"
+								fill="#4285f4"
+							></path>
+							<path d="m11 18.08h2v3.92h-2z" fill="#34a853"></path>
+							<path
+								d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z"
+								fill="#f4b400"
+							></path>
+							<path
+								d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z"
+								fill="#ea4335"
+							></path>
+						</svg>
+						<!-- END OF SVG -->
+						<!-- <img src="mic-icon.png" alt="Search by voice icon" id="voiceIco" /> -->
 					</div>
 				</div>
 				<button>Google Search</button>
