--- a/index.html
+++ b/index.html
@@ -71,15 +71,39 @@
 
 		<footer>
 			<ul>
-				<li>Advertising</li>
-				<li>Business</li>
-				<li>About</li>
-				<li>How Search Works</li>
+				<li>
+					<a
+						href="https://www.google.com/intl/en_br/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"
+						target="_blank"
+						>Advertising</a
+					>
+				</li>
+				<li>
+					<a
+						href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1"
+						target="_blank"
+						>Business</a
+					>
+				</li>
+				<li>
+					<a
+						href="https://about.google/?utm_source=google-BR&utm_medium=referral&utm_campaign=hp-footer&fg=1"
+						target="_blank"
+						>About</a
+					>
+				</li>
+				<li>
+					<a href="https://google.com/search/howsearchworks/?fg=1" target="_blank"
+						>How Search Works</a
+					>
+				</li>
 			</ul>
 			<ul>
-				<li>Privacy</li>
-				<li>Terms</li>
-				<li>Settings</li>
+				<li>
+					<a href="https://policies.google.com/privacy?hl=en-BR&fg=1" target="_blank">Privacy</a>
+				</li>
+				<li><a href="https://policies.google.com/terms?hl=en-BR&fg=1" target="_blank">Terms</a></li>
+				<li><a href="https://www.google.com/preferences?hl=en" target="_blank">Settings</a></li>
 			</ul>
 		</footer>
 	</body>
