Add box shadow to buttons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<form>
 				<div id="inputDiv">
 					<img id="magIco" src="magnifying-glass-icon.jpg" alt="Magnifying glass icon" />
-					<input type="text" placeholder="Search" />
+					<input type="text" /><!--SEARCH INPUT-->
 					<div id="voiceIcoDiv">
 						<!-- SVG COPYED BY GOOGLE -->
 						<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
