--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
 		<main>
 			<div id="logoDiv"><img src="logo.png" alt="Google logo" /></div>
-			<form>
+			<form action="https://www.google.com/search?" method="GET">
 				<div id="inputDiv">
 					<img id="magIco" src="magnifying-glass-icon.jpg" alt="Magnifying glass icon" />
-					<input type="text" /><!--SEARCH INPUT-->
+					<input type="search" name="q" /><!--SEARCH INPUT-->
 					<div id="voiceIcoDiv">
-						<!-- SVG COPYED BY GOOGLE -->
+						<!-- SVG COPIED FROM GOOGLE -->
 						<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 							<path
 								d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z"
