--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</header>
 
 		<main>
-			<div id="logoDiv"><img src="logo.png" alt="Google logo" /></div>
+			<div><img src="logo.png" alt="Google logo" /></div>
 			<form action="https://www.google.com/search?" method="GET">
 				<div id="inputDiv">
 					<img id="magIco" src="magnifying-glass-icon.jpg" alt="Magnifying glass icon" />
@@ -61,7 +61,6 @@
 							></path>
 						</svg>
 						<!-- END OF SVG -->
-						<!-- <img src="mic-icon.png" alt="Search by voice icon" id="voiceIco" /> -->
 					</div>
 				</div>
 				<button>Google Search</button>
