Add autofocus to search bar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<form action="https://www.google.com/search?" method="GET">
 				<div id="inputDiv">
 					<img id="magIco" src="magnifying-glass-icon.jpg" alt="Magnifying glass icon" />
-					<input type="search" name="q" /><!--SEARCH INPUT-->
+					<input type="search" name="q" autofocus /><!--SEARCH INPUT-->
 					<div id="voiceIcoDiv">
 						<!-- SVG COPIED FROM GOOGLE -->
 						<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
